Added some Java and JVM arguments to remove some warnings.
Signed-off-by: Constantinos Giannacoulis <c.giannacoulis@codehub.gr>