@@ -52,6 +52,7 @@
 		<maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
 		<maven-enforcer-plugin.version>3.5.0</maven-enforcer-plugin.version>
 		<maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
+		<maven.surefire-plugin.version>3.5.4</maven.surefire-plugin.version>
 		<versions-maven-plugin.version>2.18.0</versions-maven-plugin.version>
 	</properties>
 
@@ -232,10 +233,24 @@
 				</configuration>
 			</plugin>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${maven.surefire-plugin.version}</version>
+				<configuration>
+					<useSystemClassLoader>true</useSystemClassLoader>
+					<argLine>
+						--enable-preview
+						-XX:+EnableDynamicAgentLoading
+						-Xshare:off
+					</argLine>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>versions-maven-plugin</artifactId>
 				<version>${versions-maven-plugin.version}</version>
 			</plugin>
+
 		</plugins>
 
 
